# advent-of-code-2022

./: Cargo.toml
day_02/: Cargo.toml
day_02/src/: lib.rs
day_03/: Cargo.toml
day_03/src/: lib.rs
day_04/: Cargo.toml
day_05/: Cargo.toml
day_06/: Cargo.toml
day_07/: Cargo.toml
day_07/src/: lib.rs
day_08/: Cargo.toml  build.rs
day_09/: Cargo.toml
day_10/: Cargo.toml
day_10/src/: lib.rs
day_13/: Cargo.toml
day_13/src/: lib.rs
day_template/: Cargo.toml
