[workspace]
members = [
    "day_01",
    "day_02",
    "day_03",
    "day_04",
    "day_05",
    "day_06",
    "day_07",
    "day_template",
]

[workspace.package]
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/foresterre/advent-of-code-2022"
